fixed css of website and fixed dark mode

--- a/src/app/pages/profile-page-trainer/profile-page-trainer.component.sass
+++ b/src/app/pages/profile-page-trainer/profile-page-trainer.component.sass
@@ -2,7 +2,7 @@
     display: flex
     flex-direction: column
     justify-content: space-evenly
-    margin: 50px 0 50px 50px
+    padding: 50px 0 50px 50px
     width: 100vw
     gap: 50px
     overflow: scroll
@@ -82,9 +82,11 @@
     margin-bottom: 15px
 
 .trainer-stream
+    margin-top: 7px
     color: #5624D0
 
 .card-loop
     display: flex
     overflow: scroll
     gap: 30px
+    width: 88vw
