--- a/src/app/shared/cards/trainer-dashboard-header/trainer-dashboard-header.component.sass
+++ b/src/app/shared/cards/trainer-dashboard-header/trainer-dashboard-header.component.sass
@@ -1,7 +1,7 @@
 .path-title
   display: flex
   flex-direction: column
-  min-height:160px
+  min-height: 160px
   width: 100vw
   background-color: #5624D0
   // align-items: center
@@ -23,4 +23,7 @@ p
 
 .dropdown
   padding-left: 8rem
-  width:100px
+  width: 100px
+
+.p-dropdown
+  background: var(--page-content-background-color)
