--- a/src/styles.sass
+++ b/src/styles.sass
@@ -17,6 +17,7 @@
   --delete-button-background-color: #f75a5b
   --delete-button-border-color: #f75a5b
   --delete-button-text-color: #f75a5b
+  --user-card-hover-shadow-color: #9e91c0
 
 .dark-theme
   color: white
@@ -30,6 +31,7 @@
   --delete-button-background-color: #f75a5b
   --delete-button-border-color: #f75a5b
   --delete-button-text-color: #f75a5b
+  --user-card-hover-shadow-color: #585858
 
 body
   background-color: var(--app-background-color)
